# CodesOnWin

./: README.md
Cpps/: OutPuts.xlsx  Test_20220915.txt
Cpps/BinaryTree/: CMakeLists.txt  MainMyBinaryTree.cpp  Run.bat
Cpps/BinaryTree/ClassCollections/: ClassMyBinaryTree.cpp  ClassMyBinaryTree.h
Cpps/CppStudy/: .gitignore  CMakeLists.txt  MainCppStudy.cpp  Run.bat  run.sh
Cpps/CppStudy/ClassCollections/: AlgorithmStudy.hpp  Algorithm_DataStructure.cpp  Algorithm_DataStructure.h  Algorithm_DataStructure.hpp  Algorithm_Search.hpp  Algorithm_Sort.hpp  CMakeLists.txt  CasesCollection_01.hpp  ClassMyBinaryTree.cpp  ClassMyBinaryTree.h  ClassMyBinaryTree.hpp  ClassMyComplex.cpp  ClassMyComplex.h  ClassMyString.cpp  ClassMyString.h  FailureCollection.hpp  LeetCode.hpp  Solution.hpp  StudyCollection_01.hpp  StudyCollection_02_Template.hpp  StudyCollection_03_Basic.hpp  StudyCollection_STL_01.hpp  Study_01_Basic.hpp  Study_02_Template.hpp  TestClass.hpp  TestRayTracing.hpp  TestStudy.hpp
Cpps/CppStudy/ClassCollections/Algorithm/: Algorithm.hpp  Algorithm_Base.hpp  Algorithm_DataStructure.hpp  DoubleLinkedList.cpp  DoubleLinkedList.h  DoubleLinkedList_Algorithm.cpp  DoubleLinkedList_Test.cpp  SinglyLinkedList.cpp  SinglyLinkedList.h  SinglyLinkedList_Algorithm.cpp  SinglyLinkedList_Test.cpp
Cpps/CppStudy/ClassCollections/DesignPattern/: Singleton.cpp  Singleton.h
Cpps/CppStudy/ClassCollections/OO/: ClassMyComplex.cpp  ClassMyComplex.h  ClassMyString.cpp  ClassMyString.h
Cpps/CppStudy/ClassCollections/Solution/: Solution_001.hpp  Solution_002.hpp
Cpps/CppStudy/RayTracing/: Picture.cpp  Picture.h  StudyNote.MD
Cpps/CppStudy/Universe/Algorithm/: CMakeLists.txt
Cpps/CppStudy/Universe/Algorithm/interface/: Algorithm_DataStructure.h  SinglyLinkedList.h
Cpps/CppStudy/Universe/Algorithm/src/: Algorithm_DataStructure.cpp  CMakeLists.txt  SinglyLinkedList.cpp
Cpps/CppStudy/forward/: Makefile  Test.cpp  TestFF.hpp  a.exe.stackdump  rm.sh  run.bat  run.sh  studyF_01_Basic.hpp  studyF_01_Basic_1.hpp  studyF_01_Basic_2.hpp  studyF_01_Basic_3.hpp  studyF_02_CPPWeekly_1.hpp  studyF_02_Template.hpp  studyF_03_STL.hpp  studyF_04_Thread.hpp  studyF_Module.cc  studyF_Module.cpp  studyF_ModuleMain.cpp  studyF_ThreadPool.hpp  studyF_Tools.hpp
Cpps/CppStudy/outputs/: README.txt
Cpps/NNGame/: CMakeLists.txt  NNGameMain.cpp  README.md  Run.bat
Cpps/NNGame/ClassCollections/: NNGameMain.h  NNRender.cpp  NNRender.h  NNSpace.cpp  NNSpace.h  NNTensor.cpp  NNTensor.h
Cpps/Universe/: Universe.vpp
Cpps/Universe/Mathematics/: fetchList.bat  list.txt
Cpps/Universe/Mathematics/basic/: Algorithm.hpp  BasicAlgorithm.hpp  Elimination.hpp  Iteration.hpp  Matrix.h  MatrixFactory.hpp  Transformation.hpp
Cpps/Universe/Mathematics/test/: testBasic.h
Cpps/myTools/: BSpline.h  BasicTools.hpp  Parser.h  Ray.h  TestPortAvailable.hpp  Vector3.h  Vector4.h
Golang/: main.go
Java/EnternalJava/: Enternal.java  T0001Study20210913.java  run.bat  studyCollection_01_Basic.java
Python/: run.bat  studyCollection_01_Basic.py
