#************
#  * @Author: Shepherd Qirong
#  * @Date: 2023-06-27 23:37:40
#  * @Github: https://github.com/ShepherdQR
#  * @LastEditors: Shepherd Qirong
#  * @LastEditTime: 2023-06-28 00:00:45
#  * @Copyright (c) 2019--20xx Shepherd Qirong. All rights reserved.
#************
aux_source_directory(. LIB_SRCSSSSS)


add_library(algorithm SHARED ${LIB_SRCSSSSS})